Added functionality, fixed css issues

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class="container">
         <div class="result-container">
+            <div id="procedure"></div>
             <div id="factors">0</div>
             <div id="result">0</div>
+            
         </div>
 
         <div class="clear-all btn">AC</div>
