fixed bugs regarding div and mul

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="clear-all btn">AC</div>
         <div class="delete btn">DEL</div>
-        <div class="divide btn op">÷</div>
+        <div class="divide btn op">/</div>
 
         <div class="one btn num">1</div>
         <div class="two btn num">2</div>
